made truncation correct, made space on carousel exact to designs

--- a/blocks/button/button.css
+++ b/blocks/button/button.css
@@ -7,7 +7,7 @@
 }
 
 .carousel .carousel__actions button img{
-    height:  2.75em;
+    height:  2.5em;
     width:   3.5em;
 }
 
